minimal dCache running on k8s